[package]
name = "nebulas"
version = "0.2.1"
edition = "2024"

[workspace]
members = ["nebulas-core"]
resolver = "2"

[dependencies]
nebulas-core = { path = "nebulas-core" }
tokio = { version = "1.39.2", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "rt",
], optional = true }

[features]
default = ["chrono", "tokio"]
tokio = ["dep:tokio"]
chrono = ["nebulas-core/chrono"]
